[package]
name = "fastvec"
description = "A smallvec-like simple and performant buffer implementation"
version = "0.1.0"
authors = ["Mark Tolmacs <mark@lazycat.hu>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
