[package]
name = "fastvec-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
#honggfuzz = "0.5.47"

[dependencies.fastvec]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fastvec_random"
path = "fuzz_targets/fastvec_random.rs"
test = false
doc = false
